Bug 87851 - [Qt] ImageDecoderQt doesn't support some decoders
Summary: [Qt] ImageDecoderQt doesn't support some decoders
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Images (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Allan Sandfeld Jensen
URL:
Keywords:
Depends on:
Blocks: 87849
  Show dependency treegraph
 
Reported: 2012-05-30 07:09 PDT by Allan Sandfeld Jensen
Modified: 2012-05-30 23:39 PDT (History)
1 user (show)

See Also:


Attachments
Patch (3.04 KB, patch)
2012-05-30 07:14 PDT, Allan Sandfeld Jensen
no flags Details | Formatted Diff | Diff
Patch (6.16 KB, patch)
2012-05-30 07:59 PDT, Allan Sandfeld Jensen
no flags Details | Formatted Diff | Diff
Patch (3.28 KB, patch)
2012-05-30 08:32 PDT, Allan Sandfeld Jensen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Allan Sandfeld Jensen 2012-05-30 07:09:34 PDT
The new ImageDecoderQt doesn't support decoders that return images with 8bit colors, or decoders that always replace the input buffer like the GIF-decoder does. 

While the GIF-decoder is no longer necessary, there might be similar plugins elsewhere.
Comment 1 Allan Sandfeld Jensen 2012-05-30 07:14:30 PDT
Created attachment 144806 [details]
Patch
Comment 2 Allan Sandfeld Jensen 2012-05-30 07:59:22 PDT
Created attachment 144816 [details]
Patch
Comment 3 Allan Sandfeld Jensen 2012-05-30 08:00:06 PDT
Comment on attachment 144816 [details]
Patch

Wrong bug
Comment 4 Kenneth Rohde Christiansen 2012-05-30 08:02:54 PDT
Comment on attachment 144806 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=144806&action=review

> Source/WebCore/ChangeLog:4
>  
> +        [Qt] ImageDecoderQt doesn't support some decoders.
> +        https://bugs.webkit.org/show_bug.cgi?id=87851

More info about which?

> Source/WebCore/platform/graphics/qt/ImageDecoderQt.cpp:161
> +    // We don't need the tables set by prepareScaleDataIfNecessary, but their dimensions
> +    // are used by ImageDecoder::scaledSize().

Can we split those lines more equally

// We don't need the tables set by prepareScaleDataIfNecessary, but
// their dimensions are used by ImageDecoder::scaledSize().
Comment 5 Early Warning System Bot 2012-05-30 08:10:22 PDT
Comment on attachment 144806 [details]
Patch

Attachment 144806 [details] did not pass qt-ews (qt):
Output: http://queues.webkit.org/results/12859019
Comment 6 Early Warning System Bot 2012-05-30 08:23:25 PDT
Comment on attachment 144806 [details]
Patch

Attachment 144806 [details] did not pass qt-wk2-ews (qt):
Output: http://queues.webkit.org/results/12848893
Comment 7 Allan Sandfeld Jensen 2012-05-30 08:32:59 PDT
Created attachment 144826 [details]
Patch
Comment 8 Kenneth Rohde Christiansen 2012-05-30 13:57:11 PDT
Comment on attachment 144826 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=144826&action=review

> Source/WebCore/ChangeLog:15
> +        This patch also add support for down-scaling in the decoder.
> +

You should probably list tests for this?
Comment 9 WebKit Review Bot 2012-05-30 15:09:13 PDT
Comment on attachment 144826 [details]
Patch

Clearing flags on attachment: 144826

Committed r118980: <http://trac.webkit.org/changeset/118980>
Comment 10 WebKit Review Bot 2012-05-30 15:09:18 PDT
All reviewed patches have been landed.  Closing bug.