[Qt] ImageDecoderQt doesn't support some decoders. https://bugs.webkit.org/show_bug.cgi?id=87851

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-05-30
Reviewed by Kenneth Rohde Christiansen.

If forced to decode GIF and JPEG, ImageDecoderQt show several
artifacts. This is caused by mismatched decoded image-formats.

Convert mismatched color spaces into ARGB color space, and perform
manual mem-copy when the image has been decoded into a new buffer.

This patch also add support for down-scaling in the decoder.

* platform/graphics/qt/ImageDecoderQt.cpp:
(WebCore::ImageDecoderQt::internalDecodeSize):
(WebCore::ImageDecoderQt::internalHandleCurrentImage):

Canonical link: https://commits.webkit.org/105703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118980 268f45cc-cd09-0410-ab3c-d52691b4dbfc